[gd_scene load_steps=2 format=3 uid="uid://u3ck2hd5c0i6"]

[ext_resource type="Script" uid="uid://n70p4q7ovc25" path="res://lvl_1_generator.gd" id="1_dpajf"]

[node name="Level_1Generator" type="Node2D"]
script = ExtResource("1_dpajf")

[node name="counter" type="Label" parent="."]
offset_left = 236.0
offset_top = 107.0
offset_right = 1004.0
offset_bottom = 358.0
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 90
text = "Your in this scene
"
horizontal_alignment = 1

[node name="Level1_prob" type="Label" parent="."]
offset_left = 353.0
offset_top = 233.0
offset_right = 864.0
offset_bottom = 402.0
theme_override_font_sizes/font_size = 80
horizontal_alignment = 1

[node name="Back" type="Button" parent="."]
offset_left = 401.0
offset_top = 456.0
offset_right = 845.0
offset_bottom = 590.0
theme_override_font_sizes/font_size = 60
text = "Previous Scene"

[node name="MainTimer" type="Timer" parent="."]

[connection signal="pressed" from="Back" to="." method="_on_button_back_pressed"]
[connection signal="timeout" from="MainTimer" to="." method="_on_main_timer_timeout"]
